--- a/app/index.html
+++ b/app/index.html
@@ -29,10 +29,10 @@
 
         <div class="container">
           <label for="email"><b>Email</b></label>
-          <input type="text" id="login-form-email" placeholder="Entrer votre Email" name="email" required>
+          <input type="text" id="login-form-email" value="Rita@yahoo.com" placeholder="Entrer votre Email" name="email" required>
 
           <label for="psw"><b>Mot de passe</b></label>
-          <input type="password"  id="login-form-password" placeholder="Entrer votre mot de pass" name="psw" required>
+          <input type="password"  id="login-form-password" value="123" placeholder="Entrer votre mot de pass" name="psw" required>
 
           <button id="login-form-submit" >Valider</button>
           <label>
@@ -58,16 +58,16 @@
 
         <div class="container">
           <label for="uname"><b>Nom du joueur</b></label>
-          <input type="text" id="register-form-uname" placeholder="Entrer votre nom" name="uname" required>
+          <input type="text" id="register-form-uname" value="Rita" placeholder="Entrer votre nom" name="uname" required>
 
           <label for="email"><b>Email</b></label>
-          <input type="text" id="register-form-email"  placeholder="Entrer votre Email" name="email" required>
+          <input type="text" id="register-form-email" value="Rita@yahoo.com" placeholder="Entrer votre Email" name="email" required>
 
           <label for="psw"><b>Mot de passe</b></label>
-          <input type="password" id="register-form-password" placeholder="Entrer mot de pass" name="psw" required>
+          <input type="password" id="register-form-password" value="123" placeholder="Entrer mot de pass" name="psw" required>
 
           <label for="cpsw"><b>Confirmer mot de passe</b></label>
-          <input type="password" id="register-form-cpassword" placeholder="Confirmer votre mot de pass" name="cpsw" required>
+          <input type="password" id="register-form-cpassword" value="123" placeholder="Confirmer votre mot de pass" name="cpsw" required>
 
           <button id="Register-form-submit">Enregistrer</button>
         </div>
