--- a/app/public/canvas2.html
+++ b/app/public/canvas2.html
@@ -18,7 +18,7 @@
       </form>
     </div>
     <div id="main">
-        <h1>Pictionary</h1>
+        <h1 class="titre" >Pictionary</h1>
         <div id="top-message">
             <div class="draw hidden" >
                 <p>Le mot à dessiner : <span class="word"></span></p>
@@ -29,11 +29,13 @@
         </div>
         <div class="row">
           <canvas id="canvas" class="whiteboard"></canvas>
-          <div class="users"><ul></ul>
-            <div id="guesses"></div>
-            <img src="images/canvaspic.jpg">
+          <div class="users">
+            <div>Joueurs en ligne</div>
+            <ul></ul>
+            <img src="images/canvaspic.jpg" class="canvaspic" >
+            <div id="guesses"></div><br>
             <div class="draw-buttons">
-              <h3>Choisir une couleur</h3>
+              <h3>Choisis une couleur</h3>
               <button value="0" class="clear" type="button">X</button>
               <button value="#000000" class="black" type="button"></button>
               <button value="#0000EE" class="blue" type="button"></button>
@@ -47,7 +49,8 @@
     </div>
       <!-- JS -->
     <script src="//code.jquery.com/jquery-2.1.0.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.3.0/handlebars.js"></script>
-    <script src="/socket.io/socket.io.js"></script><script src="scripts/whiteboard.js"></script>
+    <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.3.0/handlebars.js"></script> -->
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="scripts/whiteboard.js"></script>
   </body>
 </html>
