--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>PICTIONARY</title>
-    <link rel="stylesheet" type="text/css" href="./public/styles/indexstyle.css" />
+    <link rel="stylesheet" type="text/css" href="./styles/indexstyle.css" />
   </head>
-  <body background="./public/images/pic.jpg">
+  <body background="./images/pic.jpg">
 
   <!-- div bouton accueil -->
 
@@ -24,7 +24,7 @@
       <div  id="f" class="modal-content animate">
         <div class="imgcontainer">
           <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-          <img src="./public/images/canvaspic.jpg" alt="pictionary" class="pictionary">
+          <img src="./images/canvaspic.jpg" alt="pictionary" class="pictionary">
         </div>
 
         <div class="container">
@@ -40,7 +40,7 @@
           </label>
         </div>
         <div class="container" style="background-color:#f1f1f1">
-          <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+          <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Annuler</button>
           <span class="psw"><a href="#">Mot de passe</a> oublié ? </span>
         </div>
       </div>
@@ -53,7 +53,7 @@
       <div class="modal-content animate">
         <div class="imgcontainer">
           <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Modal">&times;</span>
-          <img src="./public/images/canvaspic.jpg" alt="pictionary" class="pictionary">
+          <img src="./images/canvaspic.jpg" alt="pictionary" class="pictionary">
         </div>
 
         <div class="container">
@@ -75,6 +75,7 @@
     </div>
 
     <script src="http://code.jquery.com/jquery-latest.js"></script>
-   <script src="./public/scripts/form.js"></script>
+   <script src="./scripts/form.js"></script>
+
   </body>
 </html>
